@@ -21,15 +21,20 @@ package com.hedera.hashgraph.sdk;
 
 import com.google.errorprone.annotations.Var;
 import com.google.protobuf.ByteString;
+import java8.util.J8Arrays;
+import java8.util.stream.Collectors;
+import java8.util.stream.IntStream;
+import java8.util.stream.IntStreams;
+import java8.util.stream.Stream;
+import org.bouncycastle.util.encoders.DecoderException;
+import org.bouncycastle.util.encoders.Hex;
+
+import javax.annotation.Nonnegative;
+import javax.annotation.Nullable;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.IntStream;
-import java.util.stream.Stream;
-import javax.annotation.Nullable;
-import org.bouncycastle.util.encoders.DecoderException;
-import org.bouncycastle.util.encoders.Hex;
 
 // an implementation of function selector and parameter encoding as specified here:
 // https://solidity.readthedocs.io/en/v0.5.7/abi-spec.html#
@@ -94,7 +99,7 @@ public final class ContractFunctionParameters {
     }
 
     private static ByteString encodeArray(Stream<ByteString> elements) {
-        List<ByteString> list = elements.toList();
+        List<ByteString> list = elements.collect(Collectors.toList());
 
         return int256(list.size(), 32)
             .concat(ByteString.copyFrom(list));
@@ -150,7 +155,7 @@ public final class ContractFunctionParameters {
 
     static byte[] getTruncatedBytes(BigInteger bigInt, int bitWidth) {
         byte[] bytes = bigInt.toByteArray();
-        int expectedBytes = bitWidth / 8;
+        int expectedBytes = bitWidth/8;
         return bytes.length <= expectedBytes ?
             bytes :
             Arrays.copyOfRange(bytes, bytes.length - expectedBytes, bytes.length);
@@ -182,7 +187,7 @@ public final class ContractFunctionParameters {
         return rem == 32
             ? input
             : (negative ? negativePadding : padding).substring(0, rem)
-                .concat(input);
+            .concat(input);
     }
 
     static ByteString leftPad32(byte[] input, boolean negative) {
@@ -231,9 +236,9 @@ public final class ContractFunctionParameters {
      * @throws NullPointerException if any value in `strings` is null
      */
     public ContractFunctionParameters addStringArray(String[] strings) {
-        List<ByteString> byteStrings = Arrays.stream(strings)
+        List<ByteString> byteStrings = J8Arrays.stream(strings)
             .map(ContractFunctionParameters::encodeString)
-            .toList();
+            .collect(Collectors.toList());
 
         ByteString argBytes = encodeDynArr(byteStrings);
 
@@ -261,9 +266,9 @@ public final class ContractFunctionParameters {
      * @return {@code this}
      */
     public ContractFunctionParameters addBytesArray(byte[][] param) {
-        List<ByteString> byteArrays = Arrays.stream(param)
+        List<ByteString> byteArrays = J8Arrays.stream(param)
             .map(ContractFunctionParameters::encodeBytes)
-            .toList();
+            .collect(Collectors.toList());
 
         args.add(new Argument("bytes[]", encodeDynArr(byteArrays), true));
 
@@ -296,7 +301,7 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addBytes32Array(byte[][] param) {
         // array of fixed-size elements
-        Stream<ByteString> byteArrays = Arrays.stream(param)
+        Stream<ByteString> byteArrays = J8Arrays.stream(param)
             .map(ContractFunctionParameters::encodeBytes32);
 
         args.add(new Argument("bytes32[]", encodeArray(byteArrays), true));
@@ -711,11 +716,11 @@ public final class ContractFunctionParameters {
      * @return {@code this}
      */
     public ContractFunctionParameters addInt8Array(byte[] intArray) {
-        IntStream intStream = IntStream.range(0, intArray.length).map(idx -> intArray[idx]);
+        IntStream intStream = IntStreams.range(0, intArray.length).map(idx -> intArray[idx]);
 
         @Var ByteString arrayBytes = ByteString.copyFrom(
             intStream.mapToObj(i -> int256(i, 8))
-                .toList());
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -732,8 +737,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt16Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> int256(i, 16))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 16))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -750,8 +755,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt24Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> int256(i, 24))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 24))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -768,8 +773,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt32Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> int256(i, 32))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 32))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -786,8 +791,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt40Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> int256(i, 40))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 40))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -804,8 +809,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt48Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> int256(i, 48))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 48))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -822,8 +827,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt56Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> int256(i, 56))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 56))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -840,8 +845,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt64Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> int256(i, 64))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> int256(i, 64))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -858,8 +863,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt72Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 72))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 72))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -876,8 +881,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt80Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 80))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 80))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -894,8 +899,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt88Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 88))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 88))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -912,8 +917,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt96Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 96))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 96))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -930,8 +935,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt104Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 104))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 104))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -948,8 +953,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt112Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 112))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 112))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -966,8 +971,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt120Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 120))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 120))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -984,8 +989,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt128Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 128))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 128))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1002,8 +1007,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt136Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 136))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 136))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1020,8 +1025,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt144Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 144))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 144))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1038,8 +1043,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt152Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 152))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 152))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1056,8 +1061,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt160Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 160))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 160))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1074,8 +1079,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt168Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 168))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 168))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1092,8 +1097,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt176Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 176))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 176))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1110,8 +1115,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt184Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 184))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 184))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1128,8 +1133,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt192Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 192))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 192))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1146,8 +1151,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt200Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 200))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 200))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1164,8 +1169,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt208Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 208))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 208))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1182,8 +1187,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt216Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 216))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 216))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1200,8 +1205,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt224Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 224))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 224))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1218,8 +1223,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt232Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 232))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 232))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1236,8 +1241,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt240Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 240))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 240))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1254,8 +1259,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt248Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 248))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 248))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1272,8 +1277,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addInt256Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> int256(i, 256))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> int256(i, 256))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1298,9 +1303,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 16-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1313,9 +1318,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 24-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1328,9 +1333,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 32-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1343,9 +1348,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 40-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1358,9 +1363,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 48-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1373,9 +1378,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 56-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1388,9 +1393,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 64-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1403,9 +1408,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 72-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1419,9 +1424,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 80-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1435,9 +1440,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 88-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1451,9 +1456,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 96-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1467,9 +1472,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 104-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1483,9 +1488,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 112-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1499,9 +1504,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 120-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1515,9 +1520,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 128-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1531,9 +1536,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 136-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1547,9 +1552,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 144-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1563,9 +1568,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 152-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1579,9 +1584,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 160-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1595,9 +1600,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 168-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1611,9 +1616,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 176-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1627,9 +1632,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 184-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1643,9 +1648,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 192-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1659,9 +1664,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 200-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1675,9 +1680,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 208-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1691,9 +1696,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 216-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1707,9 +1712,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 224-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1723,9 +1728,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 232-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1739,9 +1744,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 240-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1755,9 +1760,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 248-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1771,9 +1776,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a 256-bit unsigned integer.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param value The integer to be added
      * @return {@code this}
@@ -1794,11 +1799,11 @@ public final class ContractFunctionParameters {
      * @return {@code this}
      */
     public ContractFunctionParameters addUint8Array(byte[] intArray) {
-        IntStream intStream = IntStream.range(0, intArray.length).map(idx -> intArray[idx]);
+        IntStream intStream = IntStreams.range(0, intArray.length).map(idx -> intArray[idx]);
 
         @Var ByteString arrayBytes = ByteString.copyFrom(
             intStream.mapToObj(i -> uint256(i, 8))
-                .toList());
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1809,17 +1814,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 16-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint16Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> uint256(i, 16))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 16))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1830,17 +1835,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 24-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint24Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> uint256(i, 24))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 24))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1851,17 +1856,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 32-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint32Array(int[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> uint256(i, 32))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 32))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1872,17 +1877,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 40-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint40Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> uint256(i, 40))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 40))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1893,17 +1898,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 48-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint48Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> uint256(i, 48))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 48))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1914,17 +1919,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 56-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint56Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> uint256(i, 56))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 56))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1935,17 +1940,17 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 64-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
      */
     public ContractFunctionParameters addUint64Array(long[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).mapToObj(i -> uint256(i, 64))
-                .toList());
+            J8Arrays.stream(intArray).mapToObj(i -> uint256(i, 64))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1956,9 +1961,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 72-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -1966,8 +1971,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint72Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 72))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 72))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -1978,9 +1983,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 80-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -1988,8 +1993,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint80Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 80))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 80))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2000,9 +2005,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 88-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2010,8 +2015,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint88Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 88))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 88))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2022,9 +2027,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 96-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2032,8 +2037,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint96Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 96))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 96))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2044,9 +2049,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 104-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2054,8 +2059,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint104Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 104))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 104))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2066,9 +2071,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 112-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2076,8 +2081,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint112Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 112))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 112))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2088,9 +2093,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 120-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2098,8 +2103,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint120Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 120))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 120))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2110,9 +2115,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 128-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2120,8 +2125,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint128Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 128))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 128))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2132,9 +2137,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 136-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2142,8 +2147,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint136Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 136))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 136))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2154,9 +2159,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 144-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2164,8 +2169,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint144Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 144))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 144))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2176,9 +2181,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 152-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2186,8 +2191,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint152Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 152))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 152))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2198,9 +2203,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 160-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2208,8 +2213,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint160Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 160))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 160))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2220,9 +2225,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 168-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2230,8 +2235,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint168Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 168))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 168))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2242,9 +2247,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 176-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2252,8 +2257,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint176Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 176))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 176))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2264,9 +2269,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 184-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2274,8 +2279,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint184Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 184))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 184))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2286,9 +2291,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 192-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2296,8 +2301,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint192Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 192))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 192))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2308,9 +2313,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 200-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2318,8 +2323,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint200Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 200))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 200))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2330,9 +2335,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 208-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2340,8 +2345,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint208Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 208))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 208))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2352,9 +2357,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 216-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2362,8 +2367,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint216Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 216))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 216))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2374,9 +2379,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 224-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2384,8 +2389,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint224Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 224))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 224))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2396,9 +2401,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 232-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2406,8 +2411,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint232Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 232))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 232))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2418,9 +2423,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 240-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2428,8 +2433,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint240Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 240))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 240))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2440,9 +2445,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 248-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2450,8 +2455,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint248Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 248))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 248))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2462,9 +2467,9 @@ public final class ContractFunctionParameters {
 
     /**
      * Add a dynamic array of 256-bit unsigned integers.
-     * <p>
-     * The value will be treated as unsigned during encoding (it will be zero-padded instead of sign-extended to 32
-     * bytes).
+
+     * The value will be treated as unsigned during encoding (it will be zero-padded instead of
+     * sign-extended to 32 bytes).
      *
      * @param intArray The array of integers to be added
      * @return {@code this}
@@ -2472,8 +2477,8 @@ public final class ContractFunctionParameters {
      */
     public ContractFunctionParameters addUint256Array(BigInteger[] intArray) {
         @Var ByteString arrayBytes = ByteString.copyFrom(
-            Arrays.stream(intArray).map(i -> uint256(i, 256))
-                .toList());
+            J8Arrays.stream(intArray).map(i -> uint256(i, 256))
+                .collect(Collectors.toList()));
 
         arrayBytes = uint256(intArray.length, 32).concat(arrayBytes);
 
@@ -2483,15 +2488,16 @@ public final class ContractFunctionParameters {
     }
 
     /**
-     * Add a {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity address parameter with the type {@code address}.
+     * Add a {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity address parameter with the type
+     * {@code address}.
      * <p>
-     * Note: adding a {@code address payable} or {@code contract} parameter must also use this function as the ABI does
-     * not support those types directly.
+     * Note: adding a {@code address payable} or {@code contract} parameter must also use
+     * this function as the ABI does not support those types directly.
      *
      * @param address The address to be added
      * @return {@code this}
-     * @throws IllegalArgumentException if the address is not exactly {@value ADDRESS_LEN_HEX} characters long or fails
-     *                                  to decode as hexadecimal.
+     * @throws IllegalArgumentException if the address is not exactly {@value ADDRESS_LEN_HEX}
+     *                                  characters long or fails to decode as hexadecimal.
      */
     public ContractFunctionParameters addAddress(String address) {
         byte[] addressBytes = decodeAddress(address);
@@ -2502,17 +2508,18 @@ public final class ContractFunctionParameters {
     }
 
     /**
-     * Add an array of {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity addresses as a {@code address[]} param.
+     * Add an array of {@value ADDRESS_LEN_HEX}-character hex-encoded Solidity addresses as a
+     * {@code address[]} param.
      *
      * @param addresses The array of addresses to be added
      * @return {@code this}
-     * @throws IllegalArgumentException if any value is not exactly {@value ADDRESS_LEN_HEX} characters long or fails to
-     *                                  decode as hexadecimal.
+     * @throws IllegalArgumentException if any value is not exactly {@value ADDRESS_LEN_HEX}
+     *                                  characters long or fails to decode as hexadecimal.
      * @throws NullPointerException     if any value in the array is null.
      */
     public ContractFunctionParameters addAddressArray(String[] addresses) {
         ByteString addressArray = encodeArray(
-            Arrays.stream(addresses).map(a -> {
+            J8Arrays.stream(addresses).map(a -> {
                 byte[] address = decodeAddress(a);
                 return leftPad32(ByteString.copyFrom(address));
             }));
@@ -2529,21 +2536,24 @@ public final class ContractFunctionParameters {
      * @param address  a hex-encoded {@value ADDRESS_LEN_HEX}-character Solidity address.
      * @param selector a
      * @return {@code this}
-     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX} characters or
-     *                                  {@code selector} is not {@value SELECTOR_LEN} bytes.
+     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX}
+     *                                  characters or {@code selector} is not
+     *                                  {@value SELECTOR_LEN} bytes.
      */
     public ContractFunctionParameters addFunction(String address, byte[] selector) {
         return addFunction(decodeAddress(address), selector);
     }
 
     /**
-     * Add a Solidity function reference as a {@value ADDRESS_LEN}-byte contract address and a constructed
-     * {@link ContractFunctionSelector}. The {@link ContractFunctionSelector} may not be modified after this call.
+     * Add a Solidity function reference as a {@value ADDRESS_LEN}-byte contract address and a
+     * constructed {@link ContractFunctionSelector}. The {@link ContractFunctionSelector}
+     * may not be modified after this call.
      *
      * @param address  The address used in the function to be added
      * @param selector The selector used in the function to be added
      * @return {@code this}
-     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX} characters.
+     * @throws IllegalArgumentException if {@code address} is not {@value ADDRESS_LEN_HEX}
+     *                                  characters.
      */
     public ContractFunctionParameters addFunction(String address, ContractFunctionSelector selector) {
         // allow the `FunctionSelector` to be reused multiple times
